<resources>
    <string name="app_name">JK_0031_guide_v1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_f1">F1</string>
    <string name="menu_f2">F2</string>
    <string name="menu_f3">F3</string>
    <string name="menu_f4">F4</string>
    <string name="menu_f5">F5</string>
    <string name="menu_f6">F6</string>
    <string name="menu_exit">Exit</string>
</resources>