<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_f1"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_f1"
            />
        <item
            android:id="@+id/nav_f2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_f2" />
        <item
            android:id="@+id/nav_f3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_f3" />
        <item
            android:id="@+id/nav_f4"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_f4" />
        <item
            android:id="@+id/nav_f5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_f5" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_exit" />
    </group>
</menu>