<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main_menu">

    <fragment
        android:id="@+id/nav_main_menu"
        android:name="com.template.ui.main_menu.MainMenuFragment"
        tools:layout="@layout/fragment_main_menu" />

    <fragment
        android:id="@+id/nav_f1"
        android:name="com.template.ui.posts.PostsFragment"
        tools:layout="@layout/fragment_posts">
        <argument
            android:defaultValue="0"
            android:name="postsIndex"
            app:argType="integer">
        </argument>
    </fragment>

    <fragment
        android:id="@+id/nav_f2"
        android:name="com.template.ui.posts.PostsFragment"
        android:label="@string/menu_f2"
        tools:layout="@layout/fragment_posts">
        <argument
            android:defaultValue="1"
            android:name="postsIndex"
            app:argType="integer">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/nav_f3"
        android:name="com.template.ui.posts.PostsFragment"
        android:label="@string/menu_f3">
        <argument
            android:defaultValue="2"
            android:name="postsIndex"
            app:argType="integer">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/nav_f4"
        android:name="com.template.ui.posts.PostsFragment"
        android:label="@string/menu_f4">
        <argument
            android:defaultValue="3"
            android:name="postsIndex"
            app:argType="integer">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/nav_f5"
        android:name="com.template.ui.posts.PostsFragment"
        android:label="@string/menu_f5">
        <argument
            android:defaultValue="4"
            android:name="postsIndex"
            app:argType="integer">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/nav_exit"
        android:name="com.template.ui.exit.ExitFragment"
        android:label="@string/menu_exit"/>
</navigation>